<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".FormularioActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/txtTitleForm"
        android:textColor="#FF5722"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreReceta"
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/rdbtnIngP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rdbtnCarne"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnCarne" />

        <RadioButton
            android:id="@+id/rdbtnPollo"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnPollo" />

        <RadioButton
            android:id="@+id/rdbtnMix"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/rdbtnMix" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtBase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbtnIngP" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:layout_marginTop="20dp"
        android:onClick="openMain"
        android:text="Volver"
        android:textColorHighlight="#090808"
        android:textColorHint="#292525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:rippleColor="#151313" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtSave"
        android:textColorHighlight="#090808"
        android:textColorHint="#292525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:rippleColor="#151313" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtAlino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtIng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbtnBase" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtIngP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreReceta" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/cbCebolla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbcebolla" />

            <CheckBox
                android:id="@+id/cbChampinon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbchampinon" />

            <CheckBox
                android:id="@+id/cbMorron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbmorron" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/cbTomate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbtomate" />

            <CheckBox
                android:id="@+id/cbTomateCherry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbtomatecherry" />

            <CheckBox
                android:id="@+id/cbPalta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbpalta" />
        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <CheckBox
            android:id="@+id/cbAjo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbajo" />

        <CheckBox
            android:id="@+id/cbAlbaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbalbaca" />

        <CheckBox
            android:id="@+id/cbOregano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cboregano" />

    </TableRow>

    <RadioGroup
        android:id="@+id/rdbtnBase"
        android:layout_width="289dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/rdbtnRoja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtnRoja" />

        <RadioButton
            android:id="@+id/rdbtnBlanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtnBlanca" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="108dp"
        android:layout_height="199dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rdbtnIngP"
        app:srcCompat="@drawable/pizza"
        tools:layout_editor_absoluteY="67dp" />

</androidx.constraintlayout.widget.ConstraintLayout>